Translate discord event info embed and slotlist message